--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,6 @@ dependencies {
 
     //Room
     implementation "androidx.room:room-runtime:2.3.0-alpha03"
-    annotationProcessor "androidx.room:room-compiler:2.3.0-alpha03"
+    kapt  "androidx.room:room-compiler:2.3.0-alpha03"
 
 }
